--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio - Servicios Profesionales</title>
+    <title>Contacto - Servicios Profesionales</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -60,53 +60,7 @@
         </nav>
       </div>
     </header>
-
-    <main class="container my-5 flex-grow-1">
-      <section id="inicio" class="section">
-        <div>
-          <h1 class="section-title">¡Bienvenidos a Servicios Profesionales!</h1>
-          <div class="row">
-            <div class="col-md-6">
-              <img
-                src="team.jpg"
-                alt="Nuestro equipo"
-                class="img-fluid rounded mb-4"
-              />
-            </div>
-            <div class="col-md-6">
-              <h2>¿Quiénes somos?</h2>
-              <p>
-                Somos un grupo de estudiantes de la UADE, apasionados por
-                ofrecer soluciones creativas y prácticas para distintos
-                desafíos.
-              </p>
-              <p>
-                Estamos aquí para aprender y ayudar, así que explora nuestro
-                sitio para descubrir cómo podemos colaborar y apoyarte en tus
-                proyectos.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer class="bg-light text-dark py-4 mt-auto">
-      <div class="container text-center">
-        <p>© 2024 Servicios Profesionales. Todos los derechos reservados.</p>
-        <p>
-          Sitio desarrollado con práctica para la materia Diseño y Desarrollo
-          Web.
-        </p>
-        <img
-          src="./img/LogoUADE.png"
-          alt="Logo UADE"
-          class="mt-2"
-          style="max-width: 100px"
-        />
-      </div>
-    </footer>
     <script src="teams.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <main class="container my-5 flex-grow-1"></main>
   </body>
 </html>
