--- a/portafolio.html
+++ b/portafolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio - Servicios Profesionales</title>
+    <title>Portafolio - Servicios Profesionales</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -62,31 +62,13 @@
     </header>
 
     <main class="container my-5 flex-grow-1">
-      <section id="inicio" class="section">
+      <section id="portafolio" class="section">
         <div>
-          <h1 class="section-title">¡Bienvenidos a Servicios Profesionales!</h1>
-          <div class="row">
-            <div class="col-md-6">
-              <img
-                src="team.jpg"
-                alt="Nuestro equipo"
-                class="img-fluid rounded mb-4"
-              />
-            </div>
-            <div class="col-md-6">
-              <h2>¿Quiénes somos?</h2>
-              <p>
-                Somos un grupo de estudiantes de la UADE, apasionados por
-                ofrecer soluciones creativas y prácticas para distintos
-                desafíos.
-              </p>
-              <p>
-                Estamos aquí para aprender y ayudar, así que explora nuestro
-                sitio para descubrir cómo podemos colaborar y apoyarte en tus
-                proyectos.
-              </p>
-            </div>
-          </div>
+          <h1 class="section-title">Nuestro Portafolio</h1>
+          <p>
+            Esta página está en desarrollo. Pronto encontrarás ejemplos de
+            nuestros proyectos y trabajos realizados.
+          </p>
         </div>
       </section>
     </main>
