--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contacto - Servicios Profesionales</title>
+    <title>Servicios - Servicios Profesionales</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -60,7 +60,35 @@
         </nav>
       </div>
     </header>
-    <script src="teams.js"></script>
-    <main class="container my-5 flex-grow-1"></main>
+
+    <main class="container my-5 flex-grow-1">
+      <section id="servicios" class="section">
+        <div>
+          <h1 class="section-title">Contacto</h1>
+          <p>
+            Esta página está en desarrollo. Pronto encontrarás información sobre
+            nuestros contactos.
+          </p>
+        </div>
+      </section>
+    </main>
+
+    <footer class="bg-light text-dark py-4 mt-auto">
+      <div class="container text-center">
+        <p>© 2024 Servicios Profesionales. Todos los derechos reservados.</p>
+        <p>
+          Sitio desarrollado con práctica para la materia Diseño y Desarrollo
+          Web.
+        </p>
+        <img
+          src="./img/LogoUADE.png"
+          alt="Logo UADE"
+          class="mt-2"
+          style="max-width: 100px"
+        />
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
