--- a/nosotros.html
+++ b/nosotros.html
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="servicios.html">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portafolio.html">Portafolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="soporte.html">Soporte</a>
@@ -65,9 +65,7 @@
       <section id="nosotros" class="section">
         <div class="container">
           <h1 class="section-title mb-5">Nuestro Equipo</h1>
-          <div class="row" id="team-members">
-            <!-- Aquí se insertarán las tarjetas de los miembros del equipo -->
-          </div>
+          <div class="row" id="team-members"></div>
         </div>
       </section>
     </main>
