--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="d-flex flex-column min-vh-100">
+  <body class="d-flex flex-column">
     <header class="bg-dark text-white fixed-top py-3">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="servicios.html">Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portafolio.html">Portafolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="soporte.html">Soporte</a>
