Agrego mi portfolio

--- a/nosotros.html
+++ b/nosotros.html
@@ -98,11 +98,12 @@
           year: "2° año",
         },
         {
-          name: "Nombre 2",
-          img: "member2.jpg",
-          portfolioLink: "#",
-          figmaLink: "https://www.figma.com/file/prototype2",
-          career: "Nombre de Carrera",
+          name: "Alejandro Valente",
+          img: "./img/Alejandro.jpeg",
+          portfolioLink: "https://alvalenteuade.github.io/Portfolio/",
+          figmaLink: 
+            "https://www.figma.com/design/Xw4lvQD2rdk3UK5BDvTEIw/Portfolio?node-id=0-1&m=dev&t=svH8nAYDW6rpG8EW-1",
+          career: "Licenciatura de Sistemas",
           year: "2° año",
         },
         {
