--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
           <a class="navbar-brand" href="index.html">
             <img
-              src="logo.png"
+              src="./img/logosp.jpeg"
               alt="Logo"
               width="30"
               height="30"
-              class="d-inline-block align-top"
+              class="d-inline-block align-top rounded-circle mb-4"
             />
             Servicios Profesionales
           </a>
@@ -64,13 +64,16 @@
     <main class="container my-5 flex-grow-1">
       <section id="inicio" class="section">
         <div>
-          <h1 class="section-title">¡Bienvenidos a Servicios Profesionales!</h1>
-          <div class="row">
-            <div class="col-md-6">
+          <h1 class="text-center mb-4">
+            ¡Bienvenidos a Servicios Profesionales!
+          </h1>
+          <div class="row align-items-center">
+            <div class="col-md-6 text-center">
               <img
-                src="team.jpg"
+                src="./img/imagen-inicio.jpeg"
                 alt="Nuestro equipo"
-                class="img-fluid rounded mb-4"
+                class="img-fluid rounded-circle mb-4"
+                style="width: 300px; height: 300px"
               />
             </div>
             <div class="col-md-6">
@@ -106,6 +109,7 @@
         />
       </div>
     </footer>
+
     <script src="teams.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
