--- a/soporte.html
+++ b/soporte.html
@@ -16,11 +16,11 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
           <a class="navbar-brand" href="index.html">
             <img
-              src="logo.png"
+              src="./img/logo.jpeg"
               alt="Logo"
               width="30"
               height="30"
-              class="d-inline-block align-top"
+              class="d-inline-block align-top rounded-circle"
             />
             Servicios Profesionales
           </a>
