--- a/nosotros.html
+++ b/nosotros.html
@@ -115,11 +115,11 @@
           year: "2° año",
         },
         {
-          name: "Nombre 4",
-          img: "member4.jpg",
-          portfolioLink: "#",
-          figmaLink: "https://www.figma.com/file/prototype4",
-          career: "Nombre de Carrera",
+          name: "Emir Sein",
+          img: "./img/emir.sein1.jpg",
+          portfolioLink: "https://github.com/emirsein1/Portfolio.git",
+          figmaLink: "https://www.figma.com/design/Iy98A9xMElwfPgSdw91lXK/Portfolio?node-id=1-6&t=L1FCbEw4syH8N69L-1",
+          career: "Licenciatura de Sistemas",
           year: "2° año",
         },
         {
