--- a/nosotros.html
+++ b/nosotros.html
@@ -123,11 +123,11 @@
           year: "2° año",
         },
         {
-          name: "Nombre 5",
-          img: "member5.jpg",
+          name: "Rosario Bonata",
+          img: "./img/rosario bonata.jpg",
           portfolioLink: "#",
-          figmaLink: "https://www.figma.com/file/prototype5",
-          career: "Nombre de Carrera",
+          figmaLink: "https://www.figma.com/design/Y72UIAFPVJOJVy9phrpHlN/PROTO1?node-id=0-1&t=RTToY5aDMiW0tuov-1 ",
+          career: "LIc en sistemas",
           year: "2° año",
         },
       ];
