--- a/nosotros.html
+++ b/nosotros.html
@@ -101,24 +101,26 @@
           name: "Alejandro Valente",
           img: "./img/Alejandro.jpeg",
           portfolioLink: "https://alvalenteuade.github.io/Portfolio/",
-          figmaLink: 
+          figmaLink:
             "https://www.figma.com/design/Xw4lvQD2rdk3UK5BDvTEIw/Portfolio?node-id=0-1&m=dev&t=svH8nAYDW6rpG8EW-1",
           career: "Licenciatura de Sistemas",
           year: "2° año",
         },
         {
-          name: "Nombre 4",
-          img: "member5.jpg",
-          portfolioLink: "#",
-          figmaLink: "https://www.figma.com/file/prototype5",
-          career: "Nombre de Carrera",
+          name: "Tomás Ignacio Domínguez",
+          img: "./img/tomas.png",
+          portfolioLink: "https://tommignacio.github.io/portfolioV2/index.html",
+          figmaLink:
+            "https://www.figma.com/design/4BaaaEy2rZROSIohTuGdCb/Portfolio?node-id=0-1&node-type=canvas&t=PPElDevkVwesBPBE-0",
+          career: "Tecnicatura en Desarrollo de Software",
           year: "2° año",
         },
         {
           name: "Emir Sein",
           img: "./img/emir.sein1.jpg",
           portfolioLink: "https://github.com/emirsein1/Portfolio.git",
-          figmaLink: "https://www.figma.com/design/Iy98A9xMElwfPgSdw91lXK/Portfolio?node-id=1-6&t=L1FCbEw4syH8N69L-1",
+          figmaLink:
+            "https://www.figma.com/design/Iy98A9xMElwfPgSdw91lXK/Portfolio?node-id=1-6&t=L1FCbEw4syH8N69L-1",
           career: "Licenciatura de Sistemas",
           year: "2° año",
         },
@@ -126,7 +128,8 @@
           name: "Rosario Bonata",
           img: "./img/rosario bonata.jpg",
           portfolioLink: "#",
-          figmaLink: "https://www.figma.com/design/Y72UIAFPVJOJVy9phrpHlN/PROTO1?node-id=0-1&t=RTToY5aDMiW0tuov-1 ",
+          figmaLink:
+            "https://www.figma.com/design/Y72UIAFPVJOJVy9phrpHlN/PROTO1?node-id=0-1&t=RTToY5aDMiW0tuov-1 ",
           career: "LIc en sistemas",
           year: "2° año",
         },
