--- a/index.html
+++ b/index.html
@@ -98,9 +98,25 @@
       <div class="container text-center">
         <p>© 2024 Servicios Profesionales. Todos los derechos reservados.</p>
         <p>
-          Sitio desarrollado con práctica para la materia Diseño y Desarrollo
-          Web.
+          Sitio desarrollado a modo de práctica para la materia Diseño y
+          Desarrollo Web.
         </p>
+        <div class="mt-4">
+          <a
+            href="https://www.figma.com/design/xhj2F8vIMU09j1YHuoFdtt/Servicios-Profesionales?node-id=1-21&t=OUN1P9oOZVaT4ogd-1"
+            target="_blank"
+            class="btn btn-secondary"
+            style="background-color: #6c757d; border-color: #6c757d"
+          >
+            <img
+              src="./img/figmalogo.png"
+              alt="Figma Logo"
+              class="me-1 rounded"
+              width="25"
+            />
+            Prototipo Figma
+          </a>
+        </div>
         <img
           src="./img/LogoUADE.png"
           alt="Logo UADE"
