--- a/servicios.html
+++ b/servicios.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
           <a class="navbar-brand" href="index.html">
             <img
-              src="./img/logo.jpeg"
+              src="./img/logosp.jpeg"
               alt="Logo"
               width="30"
               height="30"
