--- a/nosotros.html
+++ b/nosotros.html
@@ -143,11 +143,11 @@
         {
           name: "Rosario Bonata",
           img: "./img/rosario bonata.jpg",
-          portfolioLink: "#",
+          portfolioLink: "https://rosariobonata.github.io/uva2-portfolio-personal/",
           figmaLink:
             "https://www.figma.com/design/Y72UIAFPVJOJVy9phrpHlN/PROTO1?node-id=0-1&t=RTToY5aDMiW0tuov-1 ",
-          career: "LIc en sistemas",
-          year: "2° año",
+          career: "Licenciatura de Sistemas",
+          year: "1° año",
         },
       ];
 
