--- a/nosotros.html
+++ b/nosotros.html
@@ -134,7 +134,7 @@
         {
           name: "Emir Sein",
           img: "./img/emir.sein1.jpg",
-          portfolioLink: "https://emirsein1.github.io/Portfolio/",
+          portfolioLink: "https://emirsein1.github.io/Portfolio/index.html",
           figmaLink:
             "https://www.figma.com/design/Iy98A9xMElwfPgSdw91lXK/Portfolio?node-id=1-6&t=L1FCbEw4syH8N69L-1",
           career: "Licenciatura de Sistemas",
