--- a/portfolio.html
+++ b/portfolio.html
@@ -75,37 +75,46 @@
     </main>
 
     <footer class="bg-light text-dark py-4 mt-auto">
-      <div class="container text-center">
-        <p>© 2024 Servicios Profesionales. Todos los derechos reservados.</p>
-        <p>
-          Sitio desarrollado a modo de práctica para la materia Diseño y
-          Desarrollo Web.
-        </p>
-        <div class="mt-4">
-          <a
-            href="https://www.figma.com/design/xhj2F8vIMU09j1YHuoFdtt/Servicios-Profesionales?node-id=1-21&t=OUN1P9oOZVaT4ogd-1"
-            target="_blank"
-            class="btn btn-secondary"
-            style="background-color: #6c757d; border-color: #6c757d"
+      <div class="container">
+        <div
+          class="d-flex flex-column flex-md-row justify-content-between align-items-center"
+        >
+          <div class="flex-grow-1">
+            <div class="row text-center">
+              <div class="col-md-4">
+                <p class="mb-1">
+                  <strong>Materia:</strong> Diseño y Desarrollo Web
+                </p>
+              </div>
+              <div class="col-md-4">
+                <p class="mb-1"><strong>Curso:</strong> Virtual</p>
+              </div>
+              <div class="col-md-4">
+                <p class="mb-1"><strong>Grupo:</strong> 07</p>
+              </div>
+            </div>
+            <div class="row text-center mt-3">
+              <div class="col-md-12">
+                <p>
+                  © 2024 Todos los Derechos reservados - Sitio desarrollado para
+                  uso educativo - 2024
+                </p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="d-flex justify-content-center align-items-center mt-3 mt-md-0"
+            style="width: 150px"
           >
             <img
-              src="./img/figmalogo.png"
-              alt="Figma Logo"
-              class="me-1 rounded"
-              width="25"
+              src="./img/LogoUADE.png"
+              alt="Logo UADE"
+              style="max-width: 100px"
             />
-            Prototipo Figma
-          </a>
+          </div>
         </div>
-        <img
-          src="./img/LogoUADE.png"
-          alt="Logo UADE"
-          class="mt-2"
-          style="max-width: 100px"
-        />
       </div>
     </footer>
-    <script src="teams.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
