--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <div class="col-md-12">
                 <p>
                   © 2024 Todos los Derechos reservados - Sitio desarrollado para
-                  uso educativo - 2024
+                  uso educativo.
                 </p>
               </div>
             </div>
