--- a/nosotros.html
+++ b/nosotros.html
@@ -93,8 +93,8 @@
             <div class="row text-center mt-3">
               <div class="col-md-12">
                 <p>
-                  Todos los Derechos reservados - Sitio desarrollado para uso
-                  educativo - 2024
+                  © 2024 Todos los Derechos reservados - Sitio desarrollado para
+                  uso educativo.
                 </p>
               </div>
             </div>
