--- a/contacto.html
+++ b/contacto.html
@@ -97,7 +97,7 @@
               <div class="col-md-12">
                 <p>
                   © 2024 Todos los Derechos reservados - Sitio desarrollado para
-                  uso educativo - 2024
+                  uso educativo.
                 </p>
               </div>
             </div>
