act actualizando el "nosotros" x ro bonata

--- a/nosotros.html
+++ b/nosotros.html
@@ -154,7 +154,7 @@
         {
           name: "Rosario Bonata",
           img: "./img/rosario bonata.jpg",
-          portfolioLink: "#",
+          portfolioLink: "https://rosariobonata.github.io/uva2-portfolio-personal/",
           figmaLink:
             "https://www.figma.com/design/Y72UIAFPVJOJVy9phrpHlN/PROTO1?node-id=0-1&t=RTToY5aDMiW0tuov-1 ",
           career: "Licenciatura en Gestión de Tecnología de la Información",
