--- a/nosotros.html
+++ b/nosotros.html
@@ -121,7 +121,7 @@
           portfolioLink: "https://ianlio-git.github.io/Portfolio-UADE/",
           figmaLink:
             "https://www.figma.com/design/CnpTpsKwSZuE2ClMp8SzSs/Portfolio?node-id=6-74&m=dev",
-          career: "Licenciatura en Informática",
+          career: "Licenciatura de Sistemas",
           year: "2° año",
         },
         {
@@ -154,10 +154,11 @@
         {
           name: "Rosario Bonata",
           img: "./img/rosario bonata.jpg",
-          portfolioLink: "https://rosariobonata.github.io/uva2-portfolio-personal/",
+          portfolioLink:
+            "https://rosariobonata.github.io/uva2-portfolio-personal/",
           figmaLink:
             "https://www.figma.com/design/Y72UIAFPVJOJVy9phrpHlN/PROTO1?node-id=0-1&t=RTToY5aDMiW0tuov-1 ",
-          career: "Licenciatura en Gestión de Tecnología de la Información",
+          career: "Licenciatura de Sistemas",
           year: "1° año",
         },
       ];
