--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   href="contacto.html"
                   class="btn btn-custom shadow-custom btn-lg"
                 >
-                  Contáctanos
+                  Contáctenos
                 </a>
               </div>
             </div>
