cambie el link de github emir sein

--- a/nosotros.html
+++ b/nosotros.html
@@ -145,11 +145,11 @@
         {
           name: "Emir Sein",
           img: "./img/emir.sein1.jpg",
-          portfolioLink: "https://github.com/emirsein1/Portfolio.git",
+          portfolioLink: "https://emirsein1.github.io/Portfolio/",
           figmaLink:
             "https://www.figma.com/design/Iy98A9xMElwfPgSdw91lXK/Portfolio?node-id=1-6&t=L1FCbEw4syH8N69L-1",
           career: "Licenciatura de Sistemas",
-          year: "2° año",
+          year: "1° año",
         },
         {
           name: "Rosario Bonata",
