--- a/portfolio.html
+++ b/portfolio.html
@@ -127,7 +127,7 @@
               
                 <div class="botones">
                   <div>
-                    <a href="https://ianlio-git.github.io/tp2_web/" target="_blank" class="btn btn-secondary btn-sm"
+                    <a href="https://insteureka.netlify.app/" target="_blank" class="btn btn-secondary btn-sm"
                       >Ver proyecto</a
                     >
                   </div>
